--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <title>AluraGeek</title>
 </head>
 <body>
-    <header> 
-        <nav>
+    <header class="header"> 
+        <nav class="nav__container">
             <div class="header__busqueda">
                 <div class="header__logo">
                     <img class="header__img" src="./assets/logo.png" alt="logo tienda">
