--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <input type="text" placeholder="Busqueda">
             </div>
             <div class="header__btn-login">
-                <a href="#"><button type="submit">Login</button></a>
+                <a href="login.html"><button type="submit">Login</button></a>
             </div>
         </nav>
     </header>
