--- a/index.html
+++ b/index.html
@@ -254,11 +254,36 @@
               <textarea placeholder="Escriba un mensaje" required></textarea>
               <input type="submit" value="Enviar mensaje" class="btn__submit" data-submit />
             </form>
-        </div></section>
-          <div class="footer__dev">
-          <p>Diseñado por Julian Giraldo</p>
-          <p>2023</p>
-          </div>
+        </div>
+    </section>
+    <div className="footer__social">
+        <a
+          href="https://www.linkedin.com/in/julian-andres-giraldo/"
+          className="footer__social-link"
+          target="_blank"
+        >
+          <i class="uil uil-linkedin"></i>
+        </a>
+
+        <a
+          href="https://github.com/JulianGiraldoR?tab=repositories"
+          className="footer__social-link"
+          target="_blank"
+        >
+          <i class="uil uil-github"></i>
+        </a>
+
+        <a
+          href="https://www.talentpitch.co/user/julian-andres-giraldo"
+          className="footer__social-link"
+          target="_blank"
+        >
+          <i class="uil uil-megaphone"></i>
+        </a>
+      </div>
+
+      <span className="footer__copy"> &#169; JulianGiraldoDeveloper. All rigths reserved</span>
+    </div>
     </footer>
     </main>
     
