--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
             </form>
         </div>
     </section>
-    <div className="footer__social">
+    <div class="footer__social">
         <a
           href="https://www.linkedin.com/in/julian-andres-giraldo/"
-          className="footer__social-link"
+          class="footer__social-link"
           target="_blank"
         >
           <i class="uil uil-linkedin"></i>
@@ -269,7 +269,7 @@
 
         <a
           href="https://github.com/JulianGiraldoR?tab=repositories"
-          className="footer__social-link"
+          class="footer__social-link"
           target="_blank"
         >
           <i class="uil uil-github"></i>
@@ -277,7 +277,7 @@
 
         <a
           href="https://www.talentpitch.co/user/julian-andres-giraldo"
-          className="footer__social-link"
+          class="footer__social-link"
           target="_blank"
         >
           <i class="uil uil-megaphone"></i>
