--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         </a>
       
 
-      <span className="footer__copy"> &#169; JulianGiraldoDeveloper. All rigths reserved</span>
+      <span Name="footer__copy"> &#169; JulianGiraldoDeveloper. All rigths reserved</span>
     </div>
     </footer>
     </main>
