cambios generales header

--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
                     <p class="header__subtitle">Geek</p>
                 </div>
                 <input type="text" placeholder="Busqueda">
-            </div>
-            <div class="header__btn-login">
-                <a href="login.html"><button type="submit">Login</button></a>
-            </div>
+                <a class="header__btn-login" href="login.html"><button type="submit">Login</button></a>
+            </div>    
         </nav>
     </header>
 
