cambios en products

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <!--main principal donde van todos los productos de tienda-->
-    <main>
+    <main class="main__body">
         <div class="products__categoria">
             <h1 class="products__categoria--titleright">Starwars</h1>
             <p class="products__categoria--titleleft">ver todo</p>
