cambios color pagina

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <title>Login</title>
 </head>
 <body>
-    <header class="header"> 
+    <header class="header">
         <nav class="nav__container">
             <div class="header__busqueda">
                 <div class="header__logo">
@@ -23,15 +23,13 @@
                     <p class="header__subtitle">Geek</p>
                 </div>
                 <input type="text" placeholder="Busqueda">
-            </div>
-            <div class="header__btn-login">
-                <a href="#"><button type="submit">Login</button></a>
+                <a class="header__btn-login" href="login.html"><button type="submit">Login</button></a>
             </div>
         </nav>
     </header>
 
     <main class="main__login">
-        <form action="" class="login">
+        <form action="index.html" class="login">
           <h2>Iniciar Sesion</h2>
           <input type="text" placeholder="Ingrese su Email" required/>
           <input type="password" placeholder="Contraseña" name="password" autocomplete="off" required/>
